--- a/search/search.tex
+++ b/search/search.tex
@@ -567,7 +567,7 @@
 \begin{frame}[fragile]{Uninformed search}{Uniform-cost search (II)}
     \begin{exampleblock}{Uniform-cost example}
     \small{
-    Initialization: $\{[S, 0]\}$\\
+    Initialization: $\{[S, 0]\}$  V = S\\
     Iter. 1: $\{[S \rightarrow A, 1], [S \rightarrow G, 12]\}$\\
     Iter. 2: $\{[S \rightarrow A \rightarrow C, 2], [S \rightarrow A \rightarrow B, 4], [S \rightarrow G, 12]\}$\\
     Iter. 3: $\{[S \rightarrow A \rightarrow C \rightarrow D, 3], [S \rightarrow A \rightarrow C \rightarrow G, 4], [S \rightarrow A \rightarrow B \rightarrow D, 7], [S \rightarrow G, 12]\}$\\
